@@ -6,6 +6,11 @@
 
 (unreleased):
 
+    - ln uses new symlink command so it can create symlinks that point to
+      files that don't actually exist (eridius r24444).
+
+    - New bare-bones Pextlib command `symlink source target` (ticket #11840, eridius r24444).
+
     - delete reimplemented using fs-traverse (eridius r24435).
 
     - fs-traverse now uses the fts(3) family of functions instead of readdir/opendir.
